<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/winningbidlistbest_txt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/winningbidlistmybest_txt"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/winningbidlist_list">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_marginBottom="30dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="낙찰진행"
            android:id="@+id/winningbidlist_btnagree"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="거부"
            android:id="@+id/winningbidlist_btnX"
            android:layout_marginRight="50dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="나가기"
            android:id="@+id/winningbidlist_btnExit"
            android:visibility="gone"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase"
        android:id="@+id/purchase_button5" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase_not_invalidated"
        android:id="@+id/purchase_button_not_invalidated5" />
    <TextView
        android:id="@+id/purchase_button_not_invalidated_description5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:textAlignment="gravity"
        android:text="@string/purchase_button_not_invalidated_description"
        />
    <TextView
        android:id="@+id/confirmation_message5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"
        android:enabled="false" />
    <TextView
        android:id="@+id/encrypted_message5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"/>
</LinearLayout>
