<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.GalleryAuction.Dialog.ContractDialog"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_weight="1">
    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gallery_contract_dialog_WebView">

    </WebView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#BEEFFF"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ff0000"
            android:textColor="#FF1493"
            android:text="동의"
            android:id="@+id/Contract_Dialog_Agree_Btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ff0000"
            android:textColor="#FF1493"
            android:text="거부"
            android:id="@+id/Contract_Dialog_X_Btx"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ff0000"
            android:textColor="#FF1493"
            android:text="계약서 읽기"
            android:layout_weight="1"
            android:id="@+id/Contract_Dialog_Reda_Btn"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase"
        android:visibility="gone"
        android:id="@+id/purchase_button5" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase_not_invalidated"
        android:visibility="gone"
        android:id="@+id/purchase_button_not_invalidated5" />
    <TextView
        android:id="@+id/purchase_button_not_invalidated_description5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:textAlignment="gravity"
        android:visibility="gone"
        android:text="@string/purchase_button_not_invalidated_description"
        />
    <TextView
        android:id="@+id/confirmation_message5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"
        android:enabled="false" />
    <TextView
        android:id="@+id/encrypted_message5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"/>
</LinearLayout>
