<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0px"

    android:orientation="vertical" >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/bluebackgroud"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="NFC거래"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="10dip"
        android:layout_weight="3"

        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pc_product_name"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pc_product_name_edittext"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/itemname"
                    android:hint="상품명"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp"
                    android:autoText="false"
                    android:maxLength="20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pc_product_price"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/pc_product_price_edittext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/itemprice"
                        android:hint="상품 가격"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:phoneNumber="true"
                        android:textSize="15sp"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:gravity="center_vertical"
                        android:text="@string/pc_product_won"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pc_product_count"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/pc_product_count_edittext"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/itemspiner"
                    android:entries="@array/item_count"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_weight="2"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pc_product_total_price"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/pc_total_price_edittext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/itemprice"
                        android:editable="false"
                        android:hint="Total price"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:phoneNumber="true"
                        android:textSize="15sp"
                        android:maxLength="12">

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:gravity="center_vertical"
                        android:text="@string/pc_product_won"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"

       android:background="@drawable/bluebackgroud"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pc_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/whitebutton"
            android:text="거래"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/pc_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/whitebutton"
            android:text="취소"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase"
        android:id="@+id/purchase_button" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="end"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:text="@string/purchase_not_invalidated"
        android:id="@+id/purchase_button_not_invalidated" />
    <TextView
        android:id="@+id/purchase_button_not_invalidated_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:textAlignment="gravity"
        android:text="@string/purchase_button_not_invalidated_description"
        />
    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"
        android:enabled="false" />
    <TextView
        android:id="@+id/encrypted_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/purchase_done"
        android:visibility="gone"/>
</LinearLayout>